fix: winners page overflow

--- a/async-race-api/src/components/winners/winners.css
+++ b/async-race-api/src/components/winners/winners.css
@@ -8,6 +8,7 @@
   width: 100%;
   height: calc(100vh - 50px);
   background-color: white;
+  overflow: auto;
 }
 
 .table-of-winners {
